--- a/public/civil/sem1/homepage.html
+++ b/public/civil/sem1/homepage.html
@@ -136,7 +136,7 @@
         <div aria-label="main content " class="ab12345">
             
             <!--  AP -->
-            <a href="/electrical/sem1/AP.html">
+            <a href="/civil/sem1/AP.html">
                 <div class="abc123456">
                     <img class="i12345" src="/img/003.png" alt="coverpage">
                     <div class="mali147852">
@@ -150,7 +150,7 @@
                 </div>
             </a>
             <!--  Basic Engineering Drawing and Graphics -->
-            <a href="/electrical/sem2/BEDG.html">
+            <a href="/civil/sem2/BEDG.html">
                 <div class="abc123456">
                     <img class="i12345" src="/img/021.png" alt="coverpage">
                     <div class="mali147852">
@@ -162,7 +162,7 @@
                 </div>
             </a>
             <!-- Maths -->
-            <a href="/electrical/sem1/mathematics.html">
+            <a href="/civil/sem1/mathematics.html">
                 <div class="abc123456">
                     <img class="i12345" src="/img/008.png" alt="" srcset="">
                     <div class="mali147852">
@@ -176,7 +176,7 @@
                 </div>
             </a>
             <!-- English -->
-            <a href="/electrical/sem1/english.html">
+            <a href="/civil/sem1/english.html">
                 <div class="abc123456">
                     <img class="i12345" src="/img/014.png" alt="" srcset="">
                     <div class="mali147852">
@@ -194,11 +194,11 @@
             Checkout
         </h2>
         <div class="ch1233">
-            <a class="btnch22" href="/electrical/sem2/homepage.html">Sem-2</a>
-            <a class="btnch22" href="/electrical/sem3/homepage.html">Sem-3</a>
-            <a class="btnch22" href="/electrical/sem4/homepage.html">Sem-4</a>
-            <a class="btnch22" href="/electrical/sem5/homepage.html">Sem-5</a>
-            <a class="btnch22" href="/electrical/sem6/homepage.html">Sem-6</a>
+            <a class="btnch22" href="/civil/sem2/homepage.html">Sem-2</a>
+            <a class="btnch22" href="/civil/sem3/homepage.html">Sem-3</a>
+            <a class="btnch22" href="/civil/sem4/homepage.html">Sem-4</a>
+            <a class="btnch22" href="/civil/sem5/homepage.html">Sem-5</a>
+            <a class="btnch22" href="/civil/sem6/homepage.html">Sem-6</a>
         </div>
 
 
