--- a/public/civil/sem2/homepage.html
+++ b/public/civil/sem2/homepage.html
@@ -136,13 +136,37 @@
         <!-- Sem-1 -->
         <div aria-label="main content " class="ab12345">
             
-            <!--  AP -->
-            <a href="/electrical/sem1/AP.html">
+           <!-- Es  -->
+           <a href="/civil/sem1/environmentandsustainability.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/005.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Environment and Sustainablity </h1>
+                    <h1 class="d111">C4300005</h1>
+                    <h1 class="d212">Credit-3</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+            <!--  Engineering Mechanics -->
+            <a href="/civil/sem2/EM.html">
                 <div class="abc123456">
-                    <img class="i12345" src="/img/003.png" alt="coverpage">
+                    <img class="i12345" src="/img/026.png" alt="coverpage">
                     <div class="mali147852">
-                        <h1 class="bn159"> Applied Physics</h1>
-                        <h1 class="d111">C4300004</h1>
+                        <h1 class="bn159">Engineering Mechanics</h1>
+                        <h1 class="d111">C4300008</h1>
+                        <h1 class="d212">Credit-4</h1>
+                        <input class="kpb789123" type="button" value="Open">
+                    </div>
+                </div>
+            </a>
+            <!-- Applied Chemistry -->
+            <a href="/civil/sem2/AC.html">
+                <div class="abc123456">
+                    <img class="i12345" src="/img/024.png" alt="" srcset="">
+                    <div class="mali147852">
+                        <h1 class="bn159">Applied Chemistry </h1>
+                        <h1 class="d111">C4300009</h1>
                         <h1 class="d212">Credit-4</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
@@ -150,44 +174,28 @@
 
                 </div>
             </a>
-            <!--  Basic Engineering Drawing and Graphics -->
-            <a href="/electrical/sem2/BEDG.html">
+            <!--  Applied Mathematics -->
+            <a href="/civil/sem2/AM.html">
                 <div class="abc123456">
-                    <img class="i12345" src="/img/021.png" alt="coverpage">
+                    <img class="i12345" src="/img/025.png" alt="" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159">Basic Engineering Drawing and Graphics</h1>
-                        <h1 class="d111">C4300013</h1>
+                        <h1 class="bn159">Applied Mathematics </h1>
+                        <h1 class="d111">C4320001</h1>
                         <h1 class="d212">Credit-4</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
                 </div>
             </a>
-            <!-- Maths -->
-            <a href="/electrical/sem1/mathematics.html">
+            <!--  Civil Engineering Drawing -->
+            <a href="/civil/sem2/AM.html">
                 <div class="abc123456">
-                    <img class="i12345" src="/img/008.png" alt="" srcset="">
+                    <img class="i12345" src="/img/027.png" alt="" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159">Mathematics </h1>
-                        <h1 class="d111">4300001</h1>
+                        <h1 class="bn159">Civil Engineering Drawing </h1>
+                        <h1 class="d111">C4320601</h1>
                         <h1 class="d212">Credit-4</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
-
-
-                </div>
-            </a>
-            <!-- English -->
-            <a href="/electrical/sem1/english.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/014.png" alt="" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159">Communication Skills in English </h1>
-                        <h1 class="d111">4300002</h1>
-                        <h1 class="d212">Credit-3</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
-
-
                 </div>
             </a>
         </div>
@@ -195,11 +203,11 @@
             Checkout
         </h2>
         <div class="ch1233">
-            <a class="btnch22" href="/electrical/sem2/homepage.html">Sem-2</a>
-            <a class="btnch22" href="/electrical/sem3/homepage.html">Sem-3</a>
-            <a class="btnch22" href="/electrical/sem4/homepage.html">Sem-4</a>
-            <a class="btnch22" href="/electrical/sem5/homepage.html">Sem-5</a>
-            <a class="btnch22" href="/electrical/sem6/homepage.html">Sem-6</a>
+            <a class="btnch22" href="/civil/sem1/homepage.html">Sem-1</a>
+            <a class="btnch22" href="/civil/sem3/homepage.html">Sem-3</a>
+            <a class="btnch22" href="/civil/sem4/homepage.html">Sem-4</a>
+            <a class="btnch22" href="/civil/sem5/homepage.html">Sem-5</a>
+            <a class="btnch22" href="/civil/sem6/homepage.html">Sem-6</a>
         </div>
 
 
