--- a/public/civil/sem1/homepage.html
+++ b/public/civil/sem1/homepage.html
@@ -85,6 +85,7 @@
                     <td>0</td>
                     <td>50</td>
                 </tr>
+                <!-- Applied Physics  -->
                 <tr>
                     <td>C4300004</td>
                     <td>
