--- a/public/civil/sem1/BEDG.html
+++ b/public/civil/sem1/BEDG.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem-1 books download , C4300002 ,english,English download for free , Civil">
+        content="gtu diploma sem-1 books download , C4300013 ,BEDG,Basic Engineering Drawing and Graphics download for free , Civil">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content=" >English  Sem-1 book Free Download, Civil Sem-1 All Study Material free, Get GTU Diploma Civil books free download, Sem-1 Diploma Engineering">
+        content=" >Basic Engineering Drawing and Graphics  Sem-1 book Free Download, Civil Sem-1 All Study Material free, Get GTU Diploma Civil books free download, Sem-1 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Civil Diploma English - KhudKibook GTU </title>
+    <title>Civil Diploma Basic Engineering Drawing and Graphics - KhudKibook GTU </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <link rel="stylesheet" href="/cd651.css">
     <link rel="stylesheet" href="/be619.css">
@@ -22,7 +22,7 @@
     <nav id="nav">
     </nav>
     <header>
-        <h1 class="ph748">English Study Material </h1>
+        <h1 class="ph748">Basic Engineering Drawing and Graphics Study Material </h1>
     </header>
     <!-- navinfo -->
     <div class="nv759">
@@ -31,24 +31,24 @@
             <span class="nvsep729"> / </span>
             <a class="nvi751" href="/civil/sem1/homepage.html">Civil Sem-1 </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/civil/sem1/english.html">English </a>
+            <a id="atnvli953" href="/civil/sem1/BEDG.html">Basic Engineering Drawing and Graphics </a>
         </div>
     </div>
     <main>
         <div class="mc759351">
 
             <div class="mc7593512">
-                <img class="mc7593512345" src="/img/014.png" alt="Book Photo">
+                <img class="mc7593512345" src="/img/021.png" alt="Book Photo">
             </div>
             <div class="mac75935">
-                <h1 class="bn159">English</h1>
+                <h1 class="bn159">Basic Engineering Drawing and Graphics</h1>
 
-                <h1 class="md111">C4300002</h1>
-                <h1 class="md111">Credit-3</h1>
+                <h1 class="md111">C4300013</h1>
+                <h1 class="md111">Credit-4</h1>
                 <div>
                     <button class="mdbtn" data-modal-id="modal-1">Book</button>
                     <!-- Syllabus -->
-                    <a href="https://drive.google.com/uc?export=download&id=1fTISxvTpFB0sjvTVZjQE_v7-XGWYo6fq">
+                    <a href="https://drive.google.com/uc?export=download&id=17EsbqzIlh2o-1Jz8MLqgcM8Y9IJX4Dfx">
                         <button class="mdbtn">Syllabus</button>
                     </a>
                     <!-- Button 2 -->
@@ -77,14 +77,14 @@
                     <div class="m741852" id="modal-2">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=1bZXpB71He2xjgPOYNbI7HmaFVTHhtpx7">2022
+                            <a href="https://drive.google.com/uc?export=download&id=1mfqFWHP7daHDW9nK_nHjiilQ69a0CW8p">2022
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1zAotD83vv-DYvYdXrPESa9-qB9Aw_nnu">2021
+                            <a href="https://drive.google.com/uc?export=download&id=1aCK-v5-tlt0PzSBr6otondFeqUoLEnrg">2022
+                                (C To D)
                             </a>
 
                         </div>
                     </div>
-
 
                 </div>
             </div>
@@ -111,18 +111,7 @@
 
             </div>
         </a>
-        <!--  Basic Engineering Drawing and Graphics -->
-        <a href="/civil/sem2/BEDG.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/021.png" alt="coverpage">
-                <div class="mali147852">
-                    <h1 class="bn159">Basic Engineering Drawing and Graphics</h1>
-                    <h1 class="d111">C4300013</h1>
-                    <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-            </div>
-        </a>
+        
         <!-- Maths -->
         <a href="/civil/sem1/mathematics.html">
             <div class="abc123456">
@@ -137,7 +126,20 @@
 
             </div>
         </a>
-        
+        <!-- English -->
+        <a href="/civil/sem1/english.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/014.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Communication Skills in English </h1>
+                    <h1 class="d111">4300002</h1>
+                    <h1 class="d212">Credit-3</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+
+
+            </div>
+        </a>
 
     </div>
 
