--- a/public/civil/sem3/homepage.html
+++ b/public/civil/sem3/homepage.html
@@ -159,7 +159,7 @@
             <!--  Construction Materials & Technology -->
             <a href="/civil/sem3/CMT.html">
                 <div class="abc123456">
-                    <img class="i12345" src="/img/na.Webp" alt="" srcset="">
+                    <img class="i12345" src="/img/na.webp" alt="" srcset="">
                     <div class="mali147852">
                         <h1 class="bn159">Construction Materials & Technology </h1>
                         <h1 class="d111">4330603</h1>
