--- a/public/civil/sem1/AP.html
+++ b/public/civil/sem1/AP.html
@@ -41,7 +41,7 @@
                 <img class="mc7593512345" src="/img/003.png" alt="Book Photo">
             </div>
             <div class="mac75935">
-                <h1 class="bn159">English</h1>
+                <h1 class="bn159">Applied Physics</h1>
 
                 <h1 class="md111">C4300004</h1>
                 <h1 class="md111">Credit-3</h1>
@@ -145,7 +145,7 @@
     </h1>
     <div aria-label="main content " class="ab12345">
          <!-- Es  -->
-         <a href="/civil/sem1/environmentandsustainability.html">
+        <a href="/civil/sem2/environmentandsustainability.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/005.png" alt="" srcset="">
                 <div class="mali147852">
@@ -242,7 +242,7 @@
         <!--  Construction Materials & Technology -->
         <a href="/civil/sem3/CMT.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/na.Web" alt="" srcset="">
+                <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
                     <h1 class="bn159">Construction Materials & Technology </h1>
                     <h1 class="d111">4330603</h1>
