--- a/public/civil/sem1/english.html
+++ b/public/civil/sem1/english.html
@@ -147,7 +147,7 @@
     </h1>
     <div aria-label="main content " class="ab12345">
          <!-- Es  -->
-         <a href="/civil/sem1/environmentandsustainability.html">
+        <a href="/civil/sem2/environmentandsustainability.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/005.png" alt="" srcset="">
                 <div class="mali147852">
@@ -244,7 +244,7 @@
         <!--  Construction Materials & Technology -->
         <a href="/civil/sem3/CMT.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/na.Web" alt="" srcset="">
+                <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
                     <h1 class="bn159">Construction Materials & Technology </h1>
                     <h1 class="d111">4330603</h1>
