--- a/public/civil/sem2/EM.html
+++ b/public/civil/sem2/EM.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem-1 books download , C4300001 ,Maths,Mathematics download for free , Civil">
+        content="gtu diploma sem-2 books download , C4300008 ,Em,Engineering Mechanics  download for free , Civil">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content=" >Mathematics  Sem-1 book Free Download, Civil Sem-1 All Study Material free, Get GTU Diploma Civil books free download, Sem-1 Diploma Engineering">
+        content=" >Engineering Mechanics   Sem-2 book Free Download, Civil Sem-2 All Study Material free, Get GTU Diploma Civil books free download, Sem-2 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Civil Diploma Mathematics - KhudKibook GTU </title>
+    <title>Civil Diploma Engineering Mechanics - KhudKibook GTU </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <link rel="stylesheet" href="/cd651.css">
     <link rel="stylesheet" href="/be619.css">
@@ -22,33 +22,33 @@
     <nav id="nav">
     </nav>
     <header>
-        <h1 class="ph748">Mathematics Study Material </h1>
+        <h1 class="ph748">Engineering Mechanics Study Material </h1>
     </header>
     <!-- navinfo -->
     <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
             <span class="nvsep729"> / </span>
-            <a class="nvi751" href="/civil/sem1/homepage.html">Civil Sem-1 </a>
+            <a class="nvi751" href="/civil/sem2/homepage.html">Civil Sem-2 </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/civil/sem1/mathematics.html">Mathematics </a>
+            <a id="atnvli953" href="/civil/sem2/EM.html">Engineering Mechanics </a>
         </div>
     </div>
     <main>
         <div class="mc759351">
 
             <div class="mc7593512">
-                <img class="mc7593512345" src="/img/008.png" alt="Book Photo">
+                <img class="mc7593512345" src="/img/026.png" alt="Book Photo">
             </div>
             <div class="mac75935">
-                <h1 class="bn159">Mathematics</h1>
+                <h1 class="bn159">Engineering Mechanics</h1>
 
-                <h1 class="md111">4300001</h1>
+                <h1 class="md111">C4300008</h1>
                 <h1 class="md111">Credit-4</h1>
                 <div>
                     <button class="mdbtn" data-modal-id="modal-1">Book</button>
                     <!-- Syllabus -->
-                    <a href="https://drive.google.com/uc?export=download&id=1nJxDUmfcbnnKQ9lCu2xE7BUy20QjAhoV">
+                    <a href="https://drive.google.com/uc?export=download&id=1MBeoNNDxJo95l4RE-x7w0i0r-rL8RBcV">
                         <button class="mdbtn">Syllabus</button>
                     </a>
                     <!-- Button 2 -->
@@ -77,13 +77,12 @@
                     <div class="m741852" id="modal-2">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=1f7a_bQ65G_dq4-VR3NkX79S37-zg7mrH">2022
-                            </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1KmhMdlKGFQdER6JRijvp3Cpb11g70atU">2021
+                            <a href="https://drive.google.com/uc?export=download&id=1Ktobs6oM74b5NbBC-chG_LJL2sQfrqt3">2022
                             </a>
 
                         </div>
                     </div>
+
 
                 </div>
             </div>
@@ -94,6 +93,66 @@
     <!-- Recommended -->
     <h1 class="kl789123">
         Recommnded Acording to your Semester
+    </h1>
+    <div aria-label="main content " class="ab12345">
+        <!-- Es  -->
+        <a href="/civil/sem2/environmentandsustainability.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/005.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Environment and Sustainablity </h1>
+                    <h1 class="d111">C4300005</h1>
+                    <h1 class="d212">Credit-3</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+
+        <!-- Applied Chemistry -->
+        <a href="/civil/sem2/AC.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/024.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Applied Chemistry </h1>
+                    <h1 class="d111">C4300009</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+
+
+            </div>
+        </a>
+        <!--  Applied Mathematics -->
+        <a href="/civil/sem2/AM.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/025.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Applied Mathematics </h1>
+                    <h1 class="d111">C4320001</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+        <!--  Civil Engineering Drawing -->
+        <a href="/civil/sem2/CED.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/027.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Civil Engineering Drawing </h1>
+                    <h1 class="d111">C4320601</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+
+    </div>
+
+
+    <!-- Sem-1 -->
+    <h1 class="kl789123">
+        Semester-1
     </h1>
     <div aria-label="main content " class="ab12345">
         <!--  AP -->
@@ -122,6 +181,20 @@
                 </div>
             </div>
         </a>
+        <!-- Maths -->
+        <a href="/civil/sem1/mathematics.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/008.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Mathematics </h1>
+                    <h1 class="d111">4300001</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+
+
+            </div>
+        </a>
         <!-- English -->
         <a href="/civil/sem1/english.html">
             <div class="abc123456">
@@ -138,83 +211,13 @@
         </a>
 
     </div>
-
-    <!-- Sem-2 -->
-    <h1 class="kl789123">
-        Semester-2
-    </h1>
-    <div aria-label="main content " class="ab12345">
-         <!-- Es  -->
-        <a href="/civil/sem2/environmentandsustainability.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/005.png" alt="" srcset="">
-                <div class="mali147852">
-                    <h1 class="bn159">Environment and Sustainablity </h1>
-                    <h1 class="d111">C4300005</h1>
-                    <h1 class="d212">Credit-3</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-            </div>
-        </a>
-            <!--  Engineering Mechanics -->
-            <a href="/civil/sem2/EM.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/026.png" alt="coverpage">
-                    <div class="mali147852">
-                        <h1 class="bn159">Engineering Mechanics</h1>
-                        <h1 class="d111">C4300008</h1>
-                        <h1 class="d212">Credit-4</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
-                </div>
-            </a>
-            <!-- Applied Chemistry -->
-            <a href="/civil/sem2/AC.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/024.png" alt="" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159">Applied Chemistry </h1>
-                        <h1 class="d111">C4300009</h1>
-                        <h1 class="d212">Credit-4</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
-
-
-                </div>
-            </a>
-            <!--  Applied Mathematics -->
-            <a href="/civil/sem2/AM.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/025.png" alt="" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159">Applied Mathematics </h1>
-                        <h1 class="d111">C4320001</h1>
-                        <h1 class="d212">Credit-4</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
-                </div>
-            </a>
-            <!--  Civil Engineering Drawing -->
-            <a href="/civil/sem2/AM.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/027.png" alt="" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159">Civil Engineering Drawing </h1>
-                        <h1 class="d111">C4320601</h1>
-                        <h1 class="d212">Credit-4</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
-                </div>
-            </a>
-
-    </div>
     <!-- Sem-3 -->
     <h1 class="kl789123">
         Semester-3
     </h1>
     <div aria-label="main content " class="ab12345">
-           <!--  Surveying -->
-           <a href="/civil/sem3/Surveying.html">
+        <!--  Surveying -->
+        <a href="/civil/sem3/Surveying.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/044.png" alt="coverpage">
                 <div class="mali147852">
@@ -242,7 +245,7 @@
         <!--  Construction Materials & Technology -->
         <a href="/civil/sem3/CMT.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/na.Web" alt="" srcset="">
+                <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
                     <h1 class="bn159">Construction Materials & Technology </h1>
                     <h1 class="d111">4330603</h1>
