--- a/public/mechanical/sem2/homepage.html
+++ b/public/mechanical/sem2/homepage.html
@@ -5,35 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GTU Diploma Civil Sem-2</title>
+    <title>GTU Diploma Mechanical Sem-2</title>
     <link rel="stylesheet" href="/be619.css">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
         content="gtu diploma free books download , sem-2 books  , gtu diploma sem-2 it, GTU, free books , it">
     <meta name="description"
-        content="Download Free GTU Diploma Civil as well as ALL Branch Books, Syllabus, Practicals, all other study material at one place">
+        content="Download Free GTU Diploma Mechanical as well as ALL Branch Books, Syllabus, Practicals, all other study material at one place">
 
 </head>
 
 <body>
     <nav id="nav"></nav>
     <header>
-        <h1 class="ph748"> GTU Diploma Civil Sem-2 </h1>
+        <h1 class="ph748"> GTU Diploma Mechanical Sem-2 </h1>
 
     </header>
     <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/civil/sem2/homepage.html">Civil Sem-2</a>
+            <a id="atnvli953" href="/mechanical/sem2/homepage.html">Mechanical Sem-2</a>
         </div>
     </div>
     <main>
         <!-- From  -->
         <span class="infdd">
             <span class="infsub">From: 2022</span>
-            <span class="infsub">Branch Code:06</span>
+            <span class="infsub">Branch Code:19</span>
         </span>
         <!-- syllabus -->
         <div class="sydrp">
@@ -44,7 +44,7 @@
                         <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
                     </svg>
                 </span>
-</span>
+            </span>
             <table id="table">
                 <tr>
                     <th>Subcode</th>
@@ -75,11 +75,11 @@
                     <td>150</td>
                 </tr>
                 <tr>
-                    <td>C4300015</td>
+                    <td>C4321902</td>
                     <td>
                         <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1da4qwSISnVsPNh1jZwm8xsySWIfMY-fh">
-                            Applied Chemistry
+                            href="https://drive.google.com/uc?export=download&id=18nYtCeaN9ItYcNDll5MFaYbd1Z2SyXOG">
+                            Mechanical Drafting
                         </a>
                     </td>
                     <td>4</td>
@@ -97,11 +97,11 @@
                     <td>50</td>
                 </tr>
                 <tr>
-                    <td>C4300017</td>
+                    <td>C4300014</td>
                     <td>
                         <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1b8ZwskIBoQ9gyOBsdwUduq83INBQhtkI">
-                            Basics of Mechanical Engineering
+                            href="https://drive.google.com/uc?export=download&id=1XrKA0KQLzR2DA7MUIBlk3RwrJmQTKp1T">
+                            Basics of Electrical and Electronic Engineering
                         </a>
                     </td>
                     <td>3</td>
@@ -119,37 +119,37 @@
                     <td>150</td>
                 </tr>
                 <tr>
-                    <td>C4300013</td>
+                    <td>C4300019</td>
                     <td>
                         <a class="ssn"
                             href="https://drive.google.com/uc?export=download&id=1JRNBePYoOYmpa1MmTBcbG0HI06nvTUqw">
-                            Civil Engineering Drawing
+                            Computer Applications and Graphicsg
                         </a>
                     </td>
-                    <td>4</td>
-                    <td>150</td>
+                    <td>2</td>
+                    <td>50</td>
                 </tr>
-                
+
             </table>
         </div>
 
-        <!-- Sem-1 -->
+        <!-- Sem-2 -->
         <div aria-label="main content " class="ab12345">
-            
-           <!-- Es  -->
-        <a href="/civil/sem2/environmentandsustainability.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/005.png" alt="" srcset="">
-                <div class="mali147852">
-                    <h1 class="bn159">Environment and Sustainablity </h1>
-                    <h1 class="d111">C4200005</h1>
-                    <h1 class="d212">Credit-3</h1>
-                    <input class="kpb789123" type="button" value="Open">
+
+            <!-- Es  -->
+            <a href="/mechanical/sem2/environmentandsustainability.html">
+                <div class="abc123456">
+                    <img class="i12345" src="/img/005.png" alt="" srcset="">
+                    <div class="mali147852">
+                        <h1 class="bn159">Environment and Sustainablity </h1>
+                        <h1 class="d111">C4200005</h1>
+                        <h1 class="d212">Credit-3</h1>
+                        <input class="kpb789123" type="button" value="Open">
+                    </div>
                 </div>
-            </div>
-        </a>
+            </a>
             <!--  Engineering Mechanics -->
-            <a href="/civil/sem2/EM.html">
+            <a href="/mechanical/sem2/EM.html">
                 <div class="abc123456">
                     <img class="i12345" src="/img/026.png" alt="coverpage">
                     <div class="mali147852">
@@ -160,13 +160,13 @@
                     </div>
                 </div>
             </a>
-            <!-- Applied Chemistry -->
-            <a href="/civil/sem2/AC.html">
+            <!-- Mechanical Drafting -->
+            <a href="/mechanical/sem2/MD.html">
                 <div class="abc123456">
-                    <img class="i12345" src="/img/024.png" alt="" srcset="">
+                    <img class="i12345" src="/img/028.png" alt="" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159">Applied Chemistry </h1>
-                        <h1 class="d111">C4300009</h1>
+                        <h1 class="bn159">Mechanical Drafting </h1>
+                        <h1 class="d111">C4321902</h1>
                         <h1 class="d212">Credit-4</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
@@ -175,7 +175,7 @@
                 </div>
             </a>
             <!--  Applied Mathematics -->
-            <a href="/civil/sem2/AM.html">
+            <a href="/mechanical/sem2/AM.html">
                 <div class="abc123456">
                     <img class="i12345" src="/img/025.png" alt="" srcset="">
                     <div class="mali147852">
@@ -186,28 +186,17 @@
                     </div>
                 </div>
             </a>
-            <!--  Civil Engineering Drawing -->
-            <a href="/civil/sem2/CED.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/027.png" alt="" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159">Civil Engineering Drawing </h1>
-                        <h1 class="d111">C4320601</h1>
-                        <h1 class="d212">Credit-4</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
-                </div>
-            </a>
+
         </div>
         <h2 class="kl789123">
             Checkout
         </h2>
         <div class="ch1233">
-            <a class="btnch22" href="/civil/sem1/homepage.html">Sem-1</a>
-            <a class="btnch22" href="/civil/sem3/homepage.html">Sem-3</a>
-            <a class="btnch22" href="/civil/sem4/homepage.html">Sem-4</a>
-            <a class="btnch22" href="/civil/sem5/homepage.html">Sem-5</a>
-            <a class="btnch22" href="/civil/sem6/homepage.html">Sem-6</a>
+            <a class="btnch22" href="/mechanical/sem1/homepage.html">Sem-1</a>
+            <a class="btnch22" href="/mechanical/sem3/homepage.html">Sem-3</a>
+            <a class="btnch22" href="/mechanical/sem4/homepage.html">Sem-4</a>
+            <a class="btnch22" href="/mechanical/sem5/homepage.html">Sem-5</a>
+            <a class="btnch22" href="/mechanical/sem6/homepage.html">Sem-6</a>
         </div>
 
 
