--- a/public/index.html
+++ b/public/index.html
@@ -138,8 +138,9 @@
     </footer>
 
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+<!-- <script type="module" src="/config.js"></script> -->
 <script src="/ru444.js"></script>
-<!-- <script src="/sld999.js"></script> -->
 <script src="select.js"></script>
 <script src="/json.js"></script>
 
