--- a/public/civil/sem4/homepage.html
+++ b/public/civil/sem4/homepage.html
@@ -5,28 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GTU Diploma Computer Sem-4</title>
+    <title>GTU Diploma Civil Sem-4</title>
     <link rel="stylesheet" href="/be619.css">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
         content="gtu diploma free books download , sem-4 books  , gtu diploma sem-4 it, GTU, free books , it">
     <meta name="description"
-        content="Download Free GTU Diploma Computer as well as ALL Branch Books, Syllabus, Practicals, all other study material at one place">
+        content="Download Free GTU Diploma Civil as well as ALL Branch Books, Syllabus, Practicals, all other study material at one place">
 
 </head>
 
 <body>
     <nav id="nav"></nav>
     <header>
-        <h1 class="ph748"> GTU Diploma Computer Sem-4 </h1>
+        <h1 class="ph748"> GTU Diploma Civil Sem-4 </h1>
 
     </header>
     <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/computer/sem4/homepage.html">Computer Sem-4</a>
+            <a id="atnvli953" href="/civil/sem4/homepage.html">Civil Sem-4</a>
         </div>
     </div>
     <main>
