--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KhudKibook -Download Latest GTU Books | Papers | Syllabus Study Material</title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
-    <link rel="stylesheet" href="/sld646.css">
-    <link rel="stylesheet" href="/hip111.css">
-    <link rel="stylesheet" href="/be619.css">
+    <link rel="stylesheet" href="sld646.css">
+    <link rel="stylesheet" href="hip111.css">
+    <link rel="stylesheet" href="be619.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4211827566541334"
+     crossorigin="anonymous"></script>
     <script type="application/ld+json">
                         {
                           "@context" : "https://schema.org",
@@ -99,16 +101,16 @@
     </main>
     <footer id="footer">
 
-       
+      
 
 
     </footer>
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
-<script src="/ru444.js"></script>
-<script  src="/feedb.js"></script>
-<script src="/select.js"></script>
+<script src="ru444.js"></script>
+<script src="feedb.js"></script>
+<script src="select.js"></script>
 
 
 </html>
